syntax = "proto3";
package gateway;
option go_package = "gatewaypb";

service Gateway {
    rpc Version(EmptyRequest) returns (VersionResponse);

    rpc RequestGuildMembers(RequestGuildMembersRequest) returns (EmptyResponse);
    rpc RestartShard(RestartShardRequest) returns (EmptyResponse);
}

message EmptyRequest {}
message EmptyResponse {}

message VersionResponse {
    string version = 1;
}

message RequestGuildMembersRequest {
    int64 guild_id = 1;
    int32 shard = 2;
}

message RestartShardRequest {
    int32 shard = 1;
}
